add update part

--- a/C#_Cumulative_Part_1/C#_Cumulative_Part_1.csproj
+++ b/C#_Cumulative_Part_1/C#_Cumulative_Part_1.csproj
@@ -328,6 +328,7 @@
     <Content Include="Views\Teacher\Show.cshtml" />
     <Content Include="Views\Teacher\New.cshtml" />
     <Content Include="Views\Teacher\DeleteConfirm.cshtml" />
+    <Content Include="Views\Teacher\Update.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
